prepare moving common part into own repository